# kupsy

./: Cargo.toml  README.md
src/: lib.rs
src/ds/: heap.rs
src/intervals/: insert.rs  intersection.rs  merge_iters.rs  merge_overlapping.rs  mod.rs  overlaps.rs  sizes.rs  sort.rs  testing.rs  vec.rs
src/search/: binary_search.rs
