[package]
name = "kupsy"
version = "0.1.0"
edition = "2021"
authors = ["Mendy Berger"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MendyBerger/kupsy"
documentation = "https://docs.rs/kupsy"
readme = "README.md"
description = "Some data-structures and algorithms that might be useful"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
inline-python = "0.12.0"

[dependencies]
hashbrown = "0.14.3"
